--- a/sass/partials/_grid.scss
+++ b/sass/partials/_grid.scss
@@ -295,22 +295,22 @@ $margin-between-rows:     #{$line-height + 'em'};
     flex-grow: 1;
   }
 
-  .#{$size_class}--2-12,
+  .#{$size_class}--2-12--min,
   .#{$size_class}--1-6--min {
     min-width: get-percent(2,12);
     flex-basis: get-percent(2,12);
     flex-grow: 1;
   }
 
-  .#{$size_class}--3-12,
+  .#{$size_class}--3-12--min,
   .#{$size_class}--1-4--min {
     min-width: get-percent(3,12);
     flex-basis: get-percent(3,12);
     flex-grow: 1;
   }
 
-  .#{$size_class}--4-12,
-  .#{$size_class}--2-6,
+  .#{$size_class}--4-12--min,
+  .#{$size_class}--2-6--min,
   .#{$size_class}--1-3--min {
     min-width: get-percent(4,12);
     flex-basis: get-percent(4,12);
@@ -323,9 +323,9 @@ $margin-between-rows:     #{$line-height + 'em'};
     flex-grow: 1;
   }
 
-  .#{$size_class}--6-12,
-  .#{$size_class}--3-6,
-  .#{$size_class}--2-4,
+  .#{$size_class}--6-12--min,
+  .#{$size_class}--3-6--min,
+  .#{$size_class}--2-4--min,
   .#{$size_class}--1-2--min {
     min-width: get-percent(6,12);
     flex-basis: get-percent(6,12);
@@ -338,21 +338,21 @@ $margin-between-rows:     #{$line-height + 'em'};
     flex-grow: 1;
   }
 
-  .#{$size_class}--8-12,
+  .#{$size_class}--8-12--min,
   .#{$size_class}--2-3--min {
     min-width: get-percent(8,12);
     flex-basis: get-percent(8,12);
     flex-grow: 1;
   }
 
-  .#{$size_class}--9-12,
+  .#{$size_class}--9-12--min,
   .#{$size_class}--3-4--min {
     min-width: get-percent(9,12);
     flex-basis: get-percent(9,12);
     flex-grow: 1;
   }
 
-  .#{$size_class}--10-12,
+  .#{$size_class}--10-12--min,
   .#{$size_class}--5-6--min {
     min-width: get-percent(10,12);
     flex-basis: get-percent(10,12);
