--- a/sass/partials/_grid.scss
+++ b/sass/partials/_grid.scss
@@ -93,7 +93,7 @@ $expand_pull:             false !default;
   }
 }
 
-.grid.vertical-center {
+.grid.vertical-middle {
   align-items: center;
 }
 
@@ -125,9 +125,8 @@ $expand_pull:             false !default;
   flex-wrap: wrap;
   flex-grow: 0;
   flex-shrink: 1;
-  align-content: flex-start;
 
-  .vertical-centered > & {
+  .vertical-middle > & {
     vertical-align: middle;
   }
 
@@ -151,7 +150,7 @@ $expand_pull:             false !default;
 .grid__box {
   width: 100%;
   margin: 0;
-  margin-top: $margin-between-rows;
+  // margin-top: $margin-between-rows;
   padding: 0;
   position: relative;
 }
@@ -274,191 +273,31 @@ $expand_pull:             false !default;
 
 }
 
-/*
-##     ## #### ##    ## 
-###   ###  ##  ###   ## 
-#### ####  ##  ####  ## 
-## ### ##  ##  ## ## ## 
-##     ##  ##  ##  #### 
-##     ##  ##  ##   ### 
-##     ## #### ##    ## 
-*/
-
-@mixin sizes-min($size_class) {
-
-  // twelves
-
-  .#{$size_class}--1-12--min {
-    min-width: get-percent(1,12);
-    flex-basis: get-percent(1,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--2-12--min,
-  .#{$size_class}--1-6--min {
-    min-width: get-percent(2,12);
-    flex-basis: get-percent(2,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--3-12--min,
-  .#{$size_class}--1-4--min {
-    min-width: get-percent(3,12);
-    flex-basis: get-percent(3,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--4-12--min,
-  .#{$size_class}--2-6--min,
-  .#{$size_class}--1-3--min {
-    min-width: get-percent(4,12);
-    flex-basis: get-percent(4,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--5-12--min {
-    min-width: get-percent(5,12);
-    flex-basis: get-percent(5,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--6-12--min,
-  .#{$size_class}--3-6--min,
-  .#{$size_class}--2-4--min,
-  .#{$size_class}--1-2--min {
-    min-width: get-percent(6,12);
-    flex-basis: get-percent(6,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--7-12--min {
-    min-width: get-percent(7,12);
-    flex-basis: get-percent(7,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--8-12--min,
-  .#{$size_class}--2-3--min {
-    min-width: get-percent(8,12);
-    flex-basis: get-percent(8,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--9-12--min,
-  .#{$size_class}--3-4--min {
-    min-width: get-percent(9,12);
-    flex-basis: get-percent(9,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--10-12--min,
-  .#{$size_class}--5-6--min {
-    min-width: get-percent(10,12);
-    flex-basis: get-percent(10,12);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--11-12--min {
-    min-width: get-percent(11,12);
-    flex-basis: get-percent(11,12);
-    flex-grow: 1;
-  }
-
-  // golden ratio
-
-  // eights
-
-  .#{$size_class}--3-8--min {
-    min-width: get-percent(3,8);
-    flex-basis: get-percent(3,8);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--5-8--min {
-    min-width: get-percent(5,8);
-    flex-basis: get-percent(5,8);
-    flex-grow: 1;
-  }
-
-  // elevenths
-
-  .#{$size_class}--3-11--min {
-    min-width: get-percent(3,11);
-    flex-basis: get-percent(3,11);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--5-11--min {
-    min-width: get-percent(5,11);
-    flex-basis: get-percent(5,11);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--8-11--min {
-    min-width: get-percent(8,11);
-    flex-basis: get-percent(8,11);
-    flex-grow: 1;
-  }
-
-  // thirteenths
-
-  .#{$size_class}--3-13--min {
-    min-width: get-percent(3,13);
-    flex-basis: get-percent(3,13);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--5-13--min {
-    min-width: get-percent(5,13);
-    flex-basis: get-percent(5,13);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--8-13--min {
-    min-width: get-percent(8,13);
-    flex-basis: get-percent(8,13);
-    flex-grow: 1;
-  }
-
-  .#{$size_class}--11-13--min {
-    min-width: get-percent(11,13);
-    flex-basis: get-percent(11,13);
-    flex-grow: 1;
-  }
-
-}
-
 // @include sizes("all");
 
 .no-opacity,
 .lte-ie-8 {
   @include sizes("large");
-  @include sizes-min("large");
 }
 
 @media screen and ($mq_large_min) {
   @include sizes("large");
-  @include sizes-min("large");
 }
 
 @media screen and ($mq_medium_max) and ($mq_medium_min) {
   @include sizes("medium");
-  @include sizes-min("medium");
 }
 
 @media screen and ($mq_nomensland_max) and ($mq_nomensland_min) {
   @include sizes("nml");
-  @include sizes-min("nml");
 }
 
 @media screen and ($mq_small_max) {
   @include sizes("small");
-  @include sizes-min("small");
 }
 
 @media screen and ($mq_micro_max) {
   @include sizes("micro");
-  @include sizes-min("micro");
 }
 
 /*
@@ -935,7 +774,7 @@ $expand_pull:             false !default;
   }
 }
 
-// Flexbox only
+// non è che mi ricordi bene bene perché ho fatto questo, ma di certo mi è servito una volta :P
 
 .set-of-11  > .grid__item:nth-child(1n+12),
 .set-of-10  > .grid__item:nth-child(1n+11),
