--- a/sass/partials/_grid.scss
+++ b/sass/partials/_grid.scss
@@ -1,3 +1,4 @@
+@import "_functions.scss";
 @import "_mq.scss";
 
 /* ZERO-SPACE FONT HACK ©marcolago 2014 */
@@ -14,10 +15,12 @@ $line-height:             1.39 !default;
 $gutter_width_px:         22px !default;
 $gutter_width:            get-rem($gutter_width_px) !default;
 
-$margin-between-rows:     #{$line-height + 'em'};
+$margin_between_rows:     #{$line-height + 'em'};
+$margin_rows:             true !default;
 
 $expand_push:             false !default;
 $expand_pull:             false !default;
+$use_sizes_min:           false !default;
 
 /* set $use_zerospacefont to true to use Zero-Space Font for removing white space between inline-block elements */
 @if ($use_zerospacefont == true) {
@@ -73,7 +76,11 @@ $expand_pull:             false !default;
 
 .grid {
   @extend .zsf-parent;
-  /* margin-bottom: $gutter_width; */
+
+  @if ($margin_rows == true) {
+    padding-bottom: $margin_between_rows;
+  }
+
   margin-left: -$gutter_width_px;
   margin-left: -$gutter_width;
   display: flex;
@@ -84,12 +91,27 @@ $expand_pull:             false !default;
     justify-content: center;
   }
 
-  & > .grid {
+  &.gutterless {
     margin-left: 0;
   }
 
-  &.gutterless {
+  &.rowgutterless {
+    padding-bottom: 0;
+  }
+
+  &.rowgutter {
+    padding-bottom: $margin_between_rows;
+  }
+
+  & > .grid {
+
     margin-left: 0;
+  }
+
+  & .grid {
+    @if ($margin_rows == true) {
+      margin-top: -$margin_between_rows;
+    }
   }
 }
 
@@ -117,6 +139,11 @@ $expand_pull:             false !default;
   @extend .zsf-child;
   text-align: left;
   width: 100%;
+
+  @if ($margin_rows == true) {
+    margin-top: $margin_between_rows;  
+  }
+
   padding-left: $gutter_width_px;
   padding-left: $gutter_width;
   vertical-align: top;
@@ -144,6 +171,14 @@ $expand_pull:             false !default;
 
   &.autosize {
     width: auto;
+  }
+
+  .rowgutterless > & {
+    margin-top: 0;
+  }
+
+  .rowgutter > & {
+    margin-top: $margin_between_rows;
   }
 }
 
@@ -273,31 +308,202 @@ $expand_pull:             false !default;
 
 }
 
+/*
+##     ## #### ##    ## 
+###   ###  ##  ###   ## 
+#### ####  ##  ####  ## 
+## ### ##  ##  ## ## ## 
+##     ##  ##  ##  #### 
+##     ##  ##  ##   ### 
+##     ## #### ##    ## 
+*/
+
+@mixin sizes-min($size_class) {
+
+  // twelves
+
+  .#{$size_class}--1-12--min {
+    min-width: get-percent(1,12);
+    flex-basis: get-percent(1,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--2-12--min,
+  .#{$size_class}--1-6--min {
+    min-width: get-percent(2,12);
+    flex-basis: get-percent(2,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--3-12--min,
+  .#{$size_class}--1-4--min {
+    min-width: get-percent(3,12);
+    flex-basis: get-percent(3,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--4-12--min,
+  .#{$size_class}--2-6--min,
+  .#{$size_class}--1-3--min {
+    min-width: get-percent(4,12);
+    flex-basis: get-percent(4,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--5-12--min {
+    min-width: get-percent(5,12);
+    flex-basis: get-percent(5,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--6-12--min,
+  .#{$size_class}--3-6--min,
+  .#{$size_class}--2-4--min,
+  .#{$size_class}--1-2--min {
+    min-width: get-percent(6,12);
+    flex-basis: get-percent(6,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--7-12--min {
+    min-width: get-percent(7,12);
+    flex-basis: get-percent(7,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--8-12--min,
+  .#{$size_class}--2-3--min {
+    min-width: get-percent(8,12);
+    flex-basis: get-percent(8,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--9-12--min,
+  .#{$size_class}--3-4--min {
+    min-width: get-percent(9,12);
+    flex-basis: get-percent(9,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--10-12--min,
+  .#{$size_class}--5-6--min {
+    min-width: get-percent(10,12);
+    flex-basis: get-percent(10,12);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--11-12--min {
+    min-width: get-percent(11,12);
+    flex-basis: get-percent(11,12);
+    flex-grow: 1;
+  }
+
+  // golden ratio
+
+  // eights
+
+  .#{$size_class}--3-8--min {
+    min-width: get-percent(3,8);
+    flex-basis: get-percent(3,8);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--5-8--min {
+    min-width: get-percent(5,8);
+    flex-basis: get-percent(5,8);
+    flex-grow: 1;
+  }
+
+  // elevenths
+
+  .#{$size_class}--3-11--min {
+    min-width: get-percent(3,11);
+    flex-basis: get-percent(3,11);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--5-11--min {
+    min-width: get-percent(5,11);
+    flex-basis: get-percent(5,11);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--8-11--min {
+    min-width: get-percent(8,11);
+    flex-basis: get-percent(8,11);
+    flex-grow: 1;
+  }
+
+  // thirteenths
+
+  .#{$size_class}--3-13--min {
+    min-width: get-percent(3,13);
+    flex-basis: get-percent(3,13);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--5-13--min {
+    min-width: get-percent(5,13);
+    flex-basis: get-percent(5,13);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--8-13--min {
+    min-width: get-percent(8,13);
+    flex-basis: get-percent(8,13);
+    flex-grow: 1;
+  }
+
+  .#{$size_class}--11-13--min {
+    min-width: get-percent(11,13);
+    flex-basis: get-percent(11,13);
+    flex-grow: 1;
+  }
+
+}
+
 // @include sizes("all");
 
 .no-opacity,
 .lte-ie-8 {
   @include sizes("large");
+  @if ($use_sizes_min == true) {
+    @include sizes-min("large");
+  }
 }
 
 @media screen and ($mq_large_min) {
   @include sizes("large");
+  @if ($use_sizes_min == true) {
+  @include sizes-min("large");
 }
 
 @media screen and ($mq_medium_max) and ($mq_medium_min) {
   @include sizes("medium");
+  @if ($use_sizes_min == true) {
+    @include sizes-min("medium");
+  }
 }
 
 @media screen and ($mq_nomensland_max) and ($mq_nomensland_min) {
   @include sizes("nml");
+  @if ($use_sizes_min == true) {
+    @include sizes-min("nml");
+  }
 }
 
 @media screen and ($mq_small_max) {
   @include sizes("small");
+  @if ($use_sizes_min == true) {
+    @include sizes-min("small");
+  }
 }
 
 @media screen and ($mq_micro_max) {
   @include sizes("micro");
+  @if ($use_sizes_min == true) {
+    @include sizes-min("micro");
+  }
 }
 
 /*
