--- a/sass/_example.scss
+++ b/sass/_example.scss
@@ -1,33 +1,86 @@
+$c_palette_1: #69D2E7;
+$c_palette_2: #A7DBD8;
+$c_palette_3: #E0E4CC;
+$c_palette_4: #F38630;
+$c_palette_5: #4c5864;
+
 html, body {
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.custom-wrapper {
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+h3 {
+  text-align: center;
+  font-weight: normal;
+  margin: -1rem 0 1rem 0;
+}
+
+.legend {
+  width: 90%;
   max-width: 1400px;
-  margin: 2em auto;
-  background-color: rgba(black, 0.1);
-  box-sizing: border-box;
-  outline: 1px solid red;
+  margin: 1em auto;
+
+  span {
+    padding: 0.5em;
+    display: inline-block;
+    border: 1px solid rgba($c_palette_5,0.5);
+  }
+
+  span > span {
+    margin-left: 0.5em;
+  }
+}
+
+.legend--grid {
+  background-color: $c_palette_2;
+}
+
+.legend--grid__item {
+  background-color: $c_palette_1;
+}
+
+.legend--grid__box {
+  background-color: $c_palette_4;
+}
+
+.wrapper {
+  width: 90%;
+  max-width: 1400px;
+  margin: 1em auto;
+  padding: 2em 0;
+  background-color: rgba($c_palette_3, 0.05);
+  border-left: 1px dashed rgba($c_palette_5,0.5);
+  border-right: 1px dashed rgba($c_palette_5,0.5);
 
   &.padded {
     padding: 0 ($line-height * 1em);
     padding-top: $line-height * 1em;
   }
 
-  &.marginless {
+  &.no-margins {
     margin: 0 auto;
   }
 }
 
 .grid {
-  background-color: rgba(lime, 0.5);
+  background-color: $c_palette_2;
 }
 
 .grid__item {
-  background-color: rgba(pink, 0.5);
+  background-color: $c_palette_1;
+  border: 1px solid rgba($c_palette_5,0.5);
 }
 
 .grid__box {
-  background-color: rgba(yellow, 0.5);
+  padding: 0.5em;
+  background-color: $c_palette_4;
+  border: 1px solid rgba($c_palette_5,0.5);
 }
