--- a/sass/_example.scss
+++ b/sass/_example.scss
@@ -17,6 +17,14 @@ html, body {
   box-sizing: inherit;
 }
 
+* {
+  margin: 0;
+}
+
+* + * {
+  margin-top: 1em;
+}
+
 h3 {
   text-align: center;
   font-weight: normal;
@@ -24,9 +32,12 @@ h3 {
 }
 
 .legend {
+  text-align: center;
   width: 90%;
   max-width: 1400px;
-  margin: 1em auto;
+  margin: 2em auto 2em;
+  padding: 2em 1em;
+  border: 1px dashed rgba($c_palette_5,0.5);
 
   span {
     padding: 0.5em;
@@ -54,11 +65,25 @@ h3 {
 .wrapper {
   width: 90%;
   max-width: 1400px;
-  margin: 1em auto;
+  margin: 2em auto;
   padding: 2em 0;
+  position: relative;
   background-color: rgba($c_palette_3, 0.05);
-  border-left: 1px dashed rgba($c_palette_5,0.5);
-  border-right: 1px dashed rgba($c_palette_5,0.5);
+
+  &:before,
+  &:after {
+    content: "";
+    width: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 10;
+    border-left: 1px dashed rgba($c_palette_5, 0.5);
+  }
+
+  &:after {
+    right: 0;
+  }
 
   &.padded {
     padding: 0 ($line-height * 1em);
