--- a/sass/_example.scss
+++ b/sass/_example.scss
@@ -30,6 +30,7 @@ h3 {
   text-align: center;
   font-weight: normal;
   margin: -1rem 0 1rem 0;
+  padding: 0 2em;
 }
 
 .legend {
@@ -79,6 +80,16 @@ h3 {
     bottom: 0;
     z-index: 10;
     border-left: 1px dashed rgba($c_palette_5, 0.5);
+  }
+
+  &:before {
+    content: "Wrapper Limit";
+    font-size: 80%;
+    font-style: italic;
+    line-height: 1.5;
+    white-space: nowrap;
+    color: #cccccc;
+    padding: 0 0.5em;
   }
 
   &:after {
