Color Palette Change (Vanity)

--- a/sass/_example.scss
+++ b/sass/_example.scss
@@ -5,6 +5,20 @@ $c_palette_3:  #80a6af;
 $c_palette_4:  #2f5e6e;
 $c_palette_5:  #082c3a;
 
+$c_palette_1:  #cccccc;
+$c_palette_1b: #cc0000;
+$c_palette_2:  #c0df56;
+$c_palette_3:  #90af38;
+$c_palette_4:  #5f8017;
+$c_palette_5:  #113801;
+
+$c_palette_1:  #cccccc;
+$c_palette_1b: #cc0000;
+$c_palette_2:  #e986f3;
+$c_palette_3:  #c642d3;
+$c_palette_4:  #a41fb0;
+$c_palette_5:  #62206a;
+
 html, body {
   font-family: sans-serif;
   line-height: 1.68;
