--- a/sass/_example.scss
+++ b/sass/_example.scss
@@ -19,6 +19,13 @@ $c_palette_3:  #c642d3;
 $c_palette_4:  #a41fb0;
 $c_palette_5:  #62206a;
 
+$c_palette_1:  #c0d7f7;
+$c_palette_1b: #17579f;
+$c_palette_2:  #dfafdf;
+$c_palette_3:  #c768c6;
+$c_palette_4:  #971e9f;
+$c_palette_5:  #680177;
+
 html, body {
   font-family: sans-serif;
   line-height: 1.68;
